--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "nestor-group-project",
   "private": true,
+  "proxy": "http://localhost:6201",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --port 6201"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "concurrently": "^8.2.2",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
